# RandomCoffeeBotTelegram

./: .env.example  .env.eximple  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml  setup.cfg
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: build-and-push-github-packages.yml  codestyle_linters.yml  pytests.yml  stage_deploy.yml
docs/: Diagramm_of_bot_logic.drawio  RandomCoffeER.drawio  RandomCoffeeER.drawio  RandomCoffeeModelsER.drawio  codestyle.md  flowchart_search_pair.drawio
docs/materials/: briff.md  featch_list.md  featchlist.md  instructions.md
infra/dev/: docker-compose.local.yaml  docker-compose.stage.yaml  docker-compose_local.yaml
infra/prod/: prod.Dockerfile
infra/stage/: docker-compose.stage.yaml  docker_compose_stage.yaml  nginx.conf  nginx.stage.conf.template  random_coffee_bot.service  stage.Dockerfile
requirements/: develop.txt  production.txt
src/admin_user/: actions.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
src/admin_user/migrations/: 0001_initial.py
src/admin_user/utils/: render.py  reset_password.py
src/bot/: admin.py  apps.py  bot.py  bot_interface.py  dashboards.py  dashoboard_widgets.py  factories.py  handlers.py  models.py  persistence.py  utils.py
src/bot/constants/: buttons.py  cases.py  commands.py  constant.py  links.py  messages.py  models.py  pagination.py  patterns.py  states.py
src/bot/factories/: factory_student_recruiter.py
src/bot/handlers/: command_handlers.py  conversation_handlers.py  schedulers.py
src/bot/keyboards/: command_keyboards.py  conversation_keyboards.py  help_keyboard.py  menu.py
src/bot/migrations/: 0001_initial.py  0002_recruiter_search_start_time_and_more.py  0002_recruiter_waiting_time_student_waiting_time.py  0003_add_profession.py  0003_surname_null.py  0004_changed_surname.py  0004_profession_professional_key.py  0005_merge_20231002_1739.py  0006_add_formurl_model.py  0007_add_formurl_data.py  0008_add_profession.py  0009_hidden_professional_key.py  0009_messagebot.py  0018_parameterbot.py  (+12 more)
src/core/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
src/persistance_data/: persistance_file
src/tests/: conftest.py  test_help.py  test_help_keyboard.py  test_redirection_to_support.py  test_start.py  test_start_keyboard.py  test_support.py  test_support_keyboard.py
(+53 files in other folders)
