[tool.poetry]
name = "randomcoffeebottelegram"
version = "0.1.0"
description = "Project for communication between recruiters and students."
authors = ["Ярослав Андреев <1frost34eone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-telegram-bot = "^20.5"
django-asgi-lifespan = "^0.1.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
