[tool.poetry]
name = "randomcoffeebottelegram"
version = "0.1.0"
description = "Project for communication between recruiters and students."
authors = ["Ярослав Андреев <1frost34eone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-telegram-bot = "^20.5"
django-asgi-lifespan = "^0.1.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"
loguru = "^0.7.2"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-asyncio = "^0.21.1"
asyncmock = "^0.4.2"
psycopg2-binary = "^2.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
